@@ -1,3 +1,10 @@
+2012-11-19  Andreas Kupries  <andreask@activestate.com>
+
+	* uuid.tcl (::uuid::generate_tcl): Accepted patch by Sean Woods
+	* uuid.man: caching the host information part of the uuid. Avoids
+	* pkgIndex.tcl: hammering the network stack for hostname and
+	  related information. Bumped version to 1.0.2.
+
 2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
